@startuml clases

class Trabajador {
    # Monitor monitor
    # int[][] transiciones
    + disparos (  )    
}

class Capataz {
    + run (  )    
}

class Pasante {
    + run (  )    
}

class Operario {
    + run (  )    
}

class Politica {
    + int decisionRandom ( int[] )
    + int decision ( int[] )
    + int decisionCompleja ( int[], int[], int[] )
}

class Tiempo {
    - int[] transicionesTemporizadas
    - double[] tiempoDeSensibilizado
    - double[] alfas
    - double[] betas
    - double[] q
    - double[] tiempoInvariantes
    + actualizarQ ( int )
    + sensibilizarTiempo ( int )
    + resetTiempo ( int )
    + boolean enVentana ( int )
    + int[] getTransicionesTemporizadas (  )
    + double calcularTiempoRestante ( int )
    + double[] getTiempoMinInvariantes (  )
    + double[] getTiempoDeSensibilizado (  )
    + double[] getAlfas (  )
}

class Log {
    - String output
    - Log instance
    + Log getInstance (  )
    + escribirLog ( String )
    + writeFile (  )
}

class RedDePetri {
    - int[] marcado
    - int[] pInvariantesVal
    - int[][] pInvariantesPlazas
    - int[][] matrizIncidencia
    - int[] tSensibilizadas
    - int[] mapaTransicionesInvariantes
    - Log log
    - Tiempo tiempo
    + boolean disparar ( int[] )
    + int[] getTransicionesSensibilizadas (  )
    + int getCantidadTransiciones (  )
    + int[] getMapaTransicionesInvariantes (  )
    + boolean estaSensibilizada ( int[] )
    + boolean checkPInvariantes (  )
    - boolean evaluarDisparo ( int[] )
    - calcularNuevoEstado ( int[] )
    - calcularSensibilizadas (  )
    - int getMarcadoPlaza ( int )
    - int traducirTransicion ( int[] )
    - int getSumaInvariante ( int[] )
}

class Monitor {
    - Semaphore mutexMonitor
    - Semaphore[] colas
    - RedDePetri rdp
    - Politica politica
    - Tiempo tiempo
    - int nTransicionesRed
    - int[] tInvariantes
    - int interrumpidos
    + disparar ( int[] )
    + boolean seguirDisparando (  )
    + addInvariante ( int[] )
    + getResultados (  )
    - int[] obtenerVectorM (  )
    - boolean signal (  )
    - colaCondicion ( int[] )
    - dormir ( int[] )
    - int traducirTransicion ( int[] )
    - getTiempoTotalInvariantes (  )
    - String formatDoubleString ( double )
}

class Main {
    + main ( String[] )
    - int[] pInvariantes
    - int[][] matrizIncidencia
    - int[] m0
    - int[] tSensibilizadas
    - int[][] transiciones
    - int[] transicionAInvariante
    - int[] temporizadas
    - double[] alfas
    - double[] betas
    - Tiempo tiempo
    - Log log
    - RedDePetri rdp
    - Politica politica
    - Monitor monitor
    - Operario[] grupo1
    - Operario[] grupo2
    - Capataz capataz
    - Pasante pasante
    - Thread[] threads
}

class Semaphore {
    + acquire (  )
    + release (  )
}

class Thread {
    + start (  )
    + join (  )
    + sleep ( long )
}

interface Runnable

class FileWriter

class PrintWriter

Monitor --> Semaphore
RedDePetri <- Monitor
Monitor -> Politica

Runnable <|-. Capataz
Runnable <|-. Operario
Runnable <|-. Pasante
Runnable <|-. Thread

Trabajador <|-- Capataz
Trabajador <|-- Operario
Trabajador <|-- Pasante

Capataz --> Monitor
Pasante --> Monitor
Operario --> Monitor

Main --> Tiempo
Main --> Log
Main ----> Capataz
Main ----> Operario
Main ----> Pasante
Main ----> Thread
Main ----> RedDePetri
Main ----> Politica
Main -----> Monitor

Tiempo <-- Monitor
Tiempo <-- RedDePetri

Log --> Log
FileWriter <- Log
Log -> PrintWriter
Log <-- RedDePetri

@enduml